# Playground_Cmake

./: .gitignore  CMakeLists.txt
Playground_CMake/: Application.cpp  Application.h  CMakeLists.txt
